--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,11 +14,17 @@
 
     <application
         android:allowBackup="true"
+        android:name="com.orm.SugarApp"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <meta-data android:name="DATABASE" android:value="pmcontrolpuntoventa.db" />
+        <meta-data android:name="VERSION"  android:value="5" />
+        <meta-data android:name="QUERY_LOG" android:value="true" />
+        <meta-data android:name="DOMAIN_PACKAGE_NAME" android:value="pe.edu.upc.pmcontrolpuntoventa" />
+
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name"
